fix(lyricova): marcacos compatibility on Safari

--- a/packages/lyricova/src/pages/screensavers/centered.module.scss
+++ b/packages/lyricova/src/pages/screensavers/centered.module.scss
@@ -14,6 +14,7 @@
   writing-mode: tb-rl;
   overflow: hidden;
   font-size: 18.8vh;
+  font-size: 18.8svh;
   line-height: 0.85;
   opacity: 0.5;
   transition-duration: 1s;
